[gd_scene load_steps=6 format=2]

[ext_resource path="res://Ejecutable/Menu/Game Over/game_over.gd" type="Script" id=1]
[ext_resource path="res://Ejecutable/Menu/Menu_entrar/Fondo_menu.png" type="Texture" id=2]
[ext_resource path="res://Ejecutable/Menu/Fuentes/KIN668.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Ejecutable/Juego/HUD/P3_puntos/Hub3puntos.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 3 )

[node name="Game_Over" type="Node"]
script = ExtResource( 1 )

[node name="Hub_game_over" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Hub_game_over"]
position = Vector2( 2.05054, 0 )
texture = ExtResource( 2 )
centered = false

[node name="Boton_game_over" type="Button" parent="Hub_game_over"]
margin_left = 560.0
margin_top = 35.0
margin_right = 951.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
clip_text = true

[node name="Hub3puntos" parent="Hub_game_over" instance=ExtResource( 4 )]
position = Vector2( 666.967, 256.858 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
